Add login links and canvas browser icon. increment version number to 1.0 first release

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,8 @@
 	<div id="display"><ul></ul></div>
 	<p></p>
 	<div style="text-align:center;">
-		<a href="radiator.html">radiator</a>
+		<a id="login" href="#">Log in</a>
+		| <a href="radiator.html">radiator</a>
 		| <a href="options.html">configuration</a>
 	</div>
 </div>
