--- a/radiator.html
+++ b/radiator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jenkins Monitor - Status Popup</title>
+        <title>Jenkins Monitor - Status radiator</title>
 		<script type="text/javascript" src="lib/js/zepto.js"></script>
 		<script type="text/javascript" src="lib/js/constants.js"></script>
 		<script type="text/javascript" src="lib/js/underscore.js"></script>
