And minor tweak to show login or setting link

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 	</div>
 	<h1></h1>
 	<div id="display"><ul></ul></div>
-	<p></p>
+	<p class="message"></p>
 	<div style="text-align:center;">
 		<a id="login" href="#">Log in</a>
 		| <a href="radiator.html">radiator</a>
