--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="ctl00_HtmlElement" xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-	<script src="lib/js/zepto.js"></script>
+	<script src="lib/js/vendor/zepto.js"></script>
 	<script src="lib/js/constants.js"></script>
 	<script src="lib/js/options.js"></script>
 	<link rel="stylesheet" href="lib/css/options.css"/>
