--- a/radiator.html
+++ b/radiator.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Jenkins Monitor - Status radiator</title>
-		<script type="text/javascript" src="lib/js/zepto.js"></script>
+		<script type="text/javascript" src="lib/js/vendor/zepto.js"></script>
 		<script type="text/javascript" src="lib/js/constants.js"></script>
-		<script type="text/javascript" src="lib/js/underscore.js"></script>
+		<script type="text/javascript" src="lib/js/vendor/underscore.js"></script>
 		<script type="text/javascript" src="lib/js/radiator.js"></script>
 		<link href="lib/css/radiator.css" type="text/css" rel="stylesheet" />
 		<style>
