Added glossy effect option to radiator.

--- a/radiator.html
+++ b/radiator.html
@@ -16,7 +16,7 @@
 			}
 		</style>
     </head>
-    <body class="dark">
+    <body>
         <div id="wrapper">
         	<div id="divDateDisplay">
         		
