Tweak popup display to show/animate active jobs

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
 </div>
 <script id="jenkins-list-item" type="text/mustache">
     {{#jobs}}
-    <li class="status-{{color}}"><a href="{{url}}">{{name}}</a></li>
+    <li class="{{canClassName color}}"><a href="{{url}}">{{name}}</a></li>
     {{/jobs}}
 </script>
 </body>
