Add ability to have more than one view, first pass.

--- a/radiator.html
+++ b/radiator.html
@@ -27,7 +27,7 @@
 			<div id="divInfo">
 				
 			</div>
-            <div id="divRadiator">
+            <div id="divRadiator" class="radiator">
 
             </div>
         </div>
