--- a/options.html
+++ b/options.html
@@ -2,7 +2,9 @@
 <html id="ctl00_HtmlElement" xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<script src="lib/js/vendor/zepto.js"></script>
-	<script src="lib/js/constants.js"></script>
+    <script src="lib/js/vendor/knockout-2.2.1.js"></script>
+    <script src="lib/js/vendor/underscore.js"></script>
+    <script src="lib/js/constants.js"></script>
 	<script src="lib/js/options.js"></script>
 	<link rel="stylesheet" href="lib/css/options.css"/>
 
@@ -44,6 +46,32 @@
 		padding: 30px 0;
 		text-align: center;
 	}
+    img.inedit {
+        -webkit-filter: grayscale(100%);
+    }
+    #JenkinsViews_container img:active {
+        left:1px;
+        position:relative;
+        top:1px;
+    }
+    #JenkinsViews_container {
+        margin-left: 150px;
+    }
+    #JenkinsViews_container img {
+        cursor: pointer;
+    }
+    #JenkinsViews_container tr:first-child img.remove {
+        display:none;
+    }
+    #JenkinsViews_container input {
+        margin-right: 8px;
+    }
+    input.title {
+        width:10px;
+    }
+    input.url {
+        width:240px;
+    }
 	</style>
 	<!-- see http://codepo8.github.com/css-fork-on-github-ribbon/ -->
 	<style>#forkongithub a{background:#005;color:#fff;text-decoration:none;font-family:arial, sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:#060;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:800px){#forkongithub{position:absolute;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;}#forkongithub a{width:200px;position:absolute;top:60px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}</style>
@@ -101,6 +129,8 @@
 
 			</form>
 		</div>
+
+
 	</body>
 </html>
 
