update to options page

--- a/options.html
+++ b/options.html
@@ -55,7 +55,7 @@
         top:1px;
     }
     #JenkinsViews_container {
-        margin-left: 150px;
+        margin-left: 40px;
     }
     #JenkinsViews_container img {
         cursor: pointer;
@@ -66,13 +66,24 @@
     #JenkinsViews_container input {
         margin-right: 8px;
     }
-    input.title {
-        width:10px;
+    input.cols {
+        width:80px;
     }
     input.url {
-        width:240px;
+        width:280px;
     }
-	</style>
+    th {
+        text-align:left;
+    }
+    *.hidden-menu * {
+        opacity: 0;
+        -webkit-transition: opacity 500ms ease-in-out;
+    }
+    *.hidden-menu:hover *,
+    *.hidden-menu:focus * {
+        opacity: 1;
+    }
+    </style>
 	<!-- see http://codepo8.github.com/css-fork-on-github-ribbon/ -->
 	<style>#forkongithub a{background:#005;color:#fff;text-decoration:none;font-family:arial, sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#forkongithub a:hover{background:#060;color:#fff;}#forkongithub a::before,#forkongithub a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#forkongithub a::after{bottom:1px;top:auto;}@media screen and (min-width:800px){#forkongithub{position:absolute;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;}#forkongithub a{width:200px;position:absolute;top:60px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}</style>
 </head>
@@ -85,8 +96,11 @@
 			</p>
 			<nav>
 				<ul>
-					<li><a href="#sectionSettings">Settings</a></li>
-					<li><a href="#sectionDonate">Donate!</a></li>
+                    <li><a href="#sectionSettings">Settings</a></li>
+                    <!--
+                    <li><a href="#sectionAdvancedOptions">Advanced options</a></li>
+                    -->
+                    <li><a href="#sectionDonate">Donate!</a></li>
 					<li><a href="#sectionHowTo">About</a></li>
 				</ul>
 			</nav>
@@ -121,12 +135,21 @@
 				<h2>Settings</h2>
 
 				<fieldset></fieldset>
-				<p class="button">
-					<input type="reset" id="resetButton" value="Reset default options"/>
+
+				<p class="button hidden-menu">
+					<input type="reset" id="resetButton" value="DETELE my setting and reset default options"/>
 				</p>
 
 			</section>
+                <!--
+			<section id="sectionAdvancedOptions" class="hidden">
 
+				<h2>Advanced options</h2>
+
+				<fieldset></fieldset>
+
+			</section>
+            -->
 			</form>
 		</div>
 
