Tweak the popup refresh button layout and make the default sort for priority most important first.

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,8 @@
 <body>
 <div id="wrapper">
 	<div id="refresh">
-		<span>Refresh</span> <img id="refreshIcon" src="lib/i/reload19.png" alt="Refresh Button" />
+		<span>Refresh</span>
+        <img id="refreshIcon" src="lib/i/reload19.png" alt="Refresh Button" />
 	</div>
 	<h1></h1>
 	<div id="display"><ul id="jenkins-list"></ul></div>
@@ -29,4 +30,4 @@
     {{/jobs}}
 </script>
 </body>
-</html>
+</html>Z
