Remove typo, increment release number, fix the default column value for new views and only show the reflection on the hero panel if there  is only one view (Chrome bug)

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
 	<div id="display"><ul id="jenkins-list"></ul></div>
 	<p class="message"></p>
 	<div id="footer" style="text-align:center;">
-		<a id="login" href="#">Login</a>
+		<a id="login" href="#">login</a>
 		| <a href="radiator.html">radiator</a>
 		| <a href="options.html">configuration</a>
 	</div>
@@ -30,4 +30,4 @@
     {{/jobs}}
 </script>
 </body>
-</html>Z
+</html>
